Resolve conflicts and fix board model

--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Multiplayer Whiteboard",
   "main": "server.js",
   "scripts": {
-    "test": "npm run test-db && npm run test-socket",
-    "test-db": "mocha ./test/dbTest.js",
-    "test-socket": "mocha ./test/socketTest.js"
-  },
+      "test": "mocha ./test/dbTest.js && node ./test/socketTest.js"
+    },
+    "scripts": {
+      "test": "npm run test-db && npm run test-socket",
+      "test-db": "mocha ./test/dbTest.js",
+      "test-socket": "mocha ./test/socketTest.js"
+    },
   "repository": {
     "type": "git",
     "url": "https://github.com/festivetoaster/spazzinglicorice.git"
