--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.0.5",
     "body-parser": "^1.14.1",
+    "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
     "grunt-docco": "^0.4.0",
